version with build. some allerts added