@@ -7,6 +7,7 @@ import java.io.File;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 @Component
 public class PDFSplitterCommandLineRunner implements CommandLineRunner  {
@@ -25,10 +26,11 @@ public class PDFSplitterCommandLineRunner implements CommandLineRunner  {
                 Scanner scanner = new Scanner(System.in);
                 System.out.println("Введите номера страниц для сохранения (через запятую):");
                 String input = scanner.nextLine();
-                List<Integer> pages = Arrays.asList(input.split(",")).stream()
+                List<Integer> pages = Arrays.stream(input.split(","))
                         .map(String::trim)
                         .map(Integer::parseInt)
-                        .toList();
+                        .collect(Collectors.toList());
+                       // .toList();
 
                 // Спрашиваем у пользователя, куда сохранить файлы
                 System.out.println("Введите директорию для сохранения новых PDF файлов:");
